2014-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/discount.cpp: Changed to use Rcpp Attributes
	* R/discount.R: Changed call in default methods accordingly

	* src/discount.cpp: Updated copyright header with gnu.org URL
	* R/discount.R: Idem

2014-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/barrier_binary.cpp: Changed to use Rcpp Attributes
	* R/implied.R: Changed call in default methods accordingly
	* R/option.R: Idem
	* man/BarrierOption.Rd: Updated as param. list no longer returned
	* man/BinaryOption.Rd: Idem
	* man/BinaryOptionImpliedVolatility.Rd: Idem

	* src/barrier_binary.cpp: Updated copyright header with gnu.org URL
	* R/implied.R: Idem
	* R/option.R: Idem

2014-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/asian.cpp: Changed to use Rcpp Attributes
	* R/asian.R: Changed call in default method accordingly
	* man/asian.Rd: Updated as parameter list no longer returned

	* src/asian.cpp: Updated copyright header with gnu.org URL
	* R/asian.R: Idem

	* inst/unitTests/runit.calendar.R: Corrected mode

2014-03-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/zero.cpp: Changed to use Rcpp Attributes

2014-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: Changed to use Rcpp Attributes
	* src/daycounter.cpp: Idem

	* R/calendars.R: Commented-out / adapted as RcppExports.R takes over
	* R/dayCounter.R: Commented-out as RcppExports.R takes over

	* man/Calendars.Rd: Minor adjustments to documentation of default argument

	* src/rquantlib.h: Moved from inst/include to avoid lower / uppercase
	clash; this header really is an internal definition header; sources
	the content formerly in quantlib.h
	* inst/include/rquantlib_internal.h: Formerly known as rquantlib.h

	* inst/include/rquantlib_wrappers.h (Rcpp): Moved definition of as<>
	and wrap for Date and DateVector here to be read by plugin; added
	definitions for vector of dates

	* src/rquantlib: New as<> and wrap converters for DateVector
