@@ -1,3 +1,11 @@
+2014-03-27  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/hullwhite.cpp: Changed to use Rcpp Attributes
+	* R/hullWhiteCalibration.R: Changed call accordingly
+
+	* src/hullwhite.cpp:  Updated copyright header with gnu.org URL
+	* R/hullWhiteCalibration.R: Idem
+
 2014-03-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/discount.cpp: Changed to use Rcpp Attributes
